--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -9,7 +9,7 @@ jobs:
       - name: copy file server
         uses: appleboy/scp-action@master
         with:
-          host: ${{secrets.HOST}}
+          host: ${{secrets.PROD_HOST}}
           username: ${{secrets.SSH_USER_NAME}}
           port: ${{secrets.SSH_PORT}}
           key: ${{secrets.SSH_KEY}}
